--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @theme {
-  /* COLOR-WEB */
-  --color-darkblue: #030075;
-  /*  */
+  --color-white-theme: #ffffff;
+  --color-gray-light: #f0eff7;
 
-  /* FONTFAMILY */
-  --font-Poppins: 'Poppins', sans-serif;
-  --font-Inter: 'Inter', sans-serif;
-  /*  */
+  --color-blue-dark: #030075;
+  --color-purple: #5548ff;
+
+  --color-orange-light: #f6b218;
+
+  --color-black-light: #2a2a2a;
+
+  --font-poppins: 'Poppins', sans-serif;
+  --font-inter: 'Inter', sans-serif;
 }
+/* <li className="list-none">
+  <a
+    href="#newsandpromo"
+    className="group relative inline-block text-white text-sm font-bold"
+  >
+    News &amp; Promo
+
+    <span className="absolute left-0 -bottom-1 h-[2px] w-full scale-x-0 origin-center bg-white transition-transform duration-300 ease-out group-hover:scale-x-100" />
+  </a>
+</li> */
